## $Id$
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)
bin_SCRIPTS = startscwm scwm-conf cpp-sed-nl
pkgdata_DATA = Xresources-cpp gnome-session-Scwm Xmodmap-win95keyboard \
               Xsession.patch Xsession
EXTRA_DIST = $(bin_SCRIPTS) $(pkgdata_DATA)
