## $Id$
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

bin_SCRIPTS = startscwm scwm-conf cpp-sed-nl

pkgdata_DATA = gnome-session-Scwm Xsession.patch 

scwm_examples_DATA = Xresources-cpp Xmodmap-win95keyboard Xsession

EXTRA_DIST = $(bin_SCRIPTS) $(pkgdata_DATA) $(scwm_examples_DATA)
